# kodawari

./: .gitignore  README.md  docker-compose.yaml
.github/actions/setup_python/: action.yml
.github/actions/test_python/: action.yml
.github/workflows/: kodawari.authentication.yaml  kodawari.client_user_api.yaml  kodawari.event_streaming.yaml  kodawari.identity.yaml  kodawari.kafka.yaml  kodawari.logging_utilities.yaml  kodawari.models.yaml  kodawari.rest_api_utilities.yaml  recipe_api.yaml  user_api.yaml
py/lib/authentication/: authentication.py
py/lib/authentication/tests/: test_authentication.py
py/lib/authentication/tests/integration/: test_authentication_i.py
py/lib/authentication/tests/unit/: test_authentication.py
py/lib/kodawari.authentication/: README.md  pyproject.toml
py/lib/kodawari.authentication/authentication/: authentication.py
py/lib/kodawari.authentication/tests/integration/: test_authentication_i.py
py/lib/kodawari.authentication/tests/unit/: test_authentication.py
py/lib/kodawari.client_user_api/: README.md  pyproject.toml
py/lib/kodawari.client_user_api/client_user_api/: client.py
py/lib/kodawari.client_user_api/tests/integration/: test_client_i.py
py/lib/kodawari.database/: README.md  pyproject.toml
py/lib/kodawari.database/database/: cassandra.py
py/lib/kodawari.event_streaming/: README.md  pyproject.toml
py/lib/kodawari.event_streaming/event_streaming/: models.py  utilities.py
py/lib/kodawari.event_streaming/tests/unit/: test_models.py  test_utilities.py
py/lib/kodawari.identity/: README.md  pyproject.toml
py/lib/kodawari.identity/identity/: utilities.py
py/lib/kodawari.identity/tests/unit/: test_utilities.py
py/lib/kodawari.kafka/: pyproject.toml
py/lib/kodawari.kafka/kafka/: utilities.py
py/lib/kodawari.kafka/tests/unit/: test_models.py  test_utilities.py
py/lib/kodawari.logging_utilities/: README.md  pyproject.toml
py/lib/kodawari.logging_utilities/logging_utilities/: utilities.py
py/lib/kodawari.logging_utilities/tests/integration/: test_utilities_i.py
py/lib/kodawari.logging_utilities/tests/unit/: test_utilities.py
py/lib/kodawari.models/: README.md  pyproject.toml
py/lib/kodawari.models/models/: recipe.py  user.py
py/lib/kodawari.models/tests/unit/: test_recipe.py  test_user.py
py/lib/kodawari.rest_api_utilities/: README.md  pyproject.toml
py/lib/kodawari.rest_api_utilities/rest_api_utilities/: fastapi.py
py/lib/kodawari.rest_api_utilities/tests/unit/: test_fastapi.py
py/projects/recipe_api/: README.md  openapi.json  pyproject.toml
py/projects/recipe_api/recipe_api/: main.py
py/projects/recipe_api/tests/integration/: test_recipe_api.py
py/projects/user_api/: Dockerfile  README.md  openapi.json  pyproject.toml
py/projects/user_api/tests/integration/: test_user_api.py
py/projects/user_api/user_api/: main.py
tools/cassandra/: kodawari_keyspace.cql  recipe_schema.cql  schema.cql  user_schema.cql
tools/docker/: Dockerfile.cassandra_schema_loader  Dockerfile.recipe_api  Dockerfile.user_api  docker-compose.yaml
tools/scripts/: generate_open_api_spec_recipe_api.sh  generate_open_api_spec_user_api.sh  start_recipe_api.sh  start_stack.sh  start_user_api.sh  stop_recipe_api.sh  stop_stack.sh  stop_user_api.sh  test_workflow.sh
