[tool.poetry]
name = "kodawari.database"
version = "0.1.0"
description = "A package providing database access utilities"
authors = ["Zachary Groff <groff.zackm@gmail.com>"]
readme = "README.md"
packages = [{include = "database"}]

[tool.poetry.dependencies]
python = "^3.11"
acsylla = {version = "^0.1.8b0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pyright = "^1.1.288"
isort = "^5.11.4"
ssort = "^0.11.6"
black = "^22.12.0"
darglint = "^1.8.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
cassandra = ["acsylla"]
