[tool.poetry]
name = "kodawari.models"
version = "0.1.0"
description = "A package to house models shared by kodawari services"
authors = ["Zachary Groff <groff.zackm@gmail.com>"]
readme = "README.md"
packages = [{include = "models"}]

[tool.poetry.dependencies]
python = "^3.8.16"
pydantic = "^1.10.4"
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.288"
isort = "^5.11.4"
ssort = "^0.11.6"
black = "^22.12.0"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
