[tool.poetry]
name = "recipe_api"
version = "0.1.0"
description = "An API for managing recipe and variation data"
authors = ["Zachary Groff <groff.zackm@gmail.com>"]
readme = "README.md"
packages = [{include = "recipe_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
acsylla = "^0.1.8b0"
kodawari-authentication = {path = "../../lib/kodawari.authentication", develop = true}
kodawari-models = {path = "../../lib/kodawari.models", develop = true}
kodawari-logging-utilities = {path = "../../lib/kodawari.logging_utilities", develop = true}
kodawari-identity = {path = "../../lib/kodawari.identity", develop = true}
kodawari-event-streaming = {path = "../../lib/kodawari.event_streaming", develop = true}
kodawari-rest-api-utilities = {path = "../../lib/kodawari.rest_api_utilities", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pyright = "^1.1.288"
isort = "^5.11.4"
ssort = "^0.11.6"
black = "^22.12.0"
darglint = "^1.8.1"
requests = "^2.28.2"
pytest-asyncio = "^0.20.3"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
